--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="enable_notifications">Activer les notifications</string>
+    <string name="test_notifications">Tester les notifications</string>
 
 </resources>
