--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="enable_notifications">Activer les notifications</string>
     <string name="test_notifications">Tester les notifications</string>
+    <string name="disable_notifications">Désactiver les notifications</string>
 
 </resources>
